--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,21 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11.11"
-dependencies = []
+dependencies = [
+    "dotenv>=0.9.9",
+    "faker>=37.1.0",
+    "flask>=3.1.0",
+    "flask-bcrypt>=1.0.1",
+    "flask-cors>=5.0.1",
+    "flask-jwt-extended>=4.7.1",
+    "flask-login>=0.6.3",
+    "flask-marshmallow>=1.3.0",
+    "flask-migrate>=4.1.0",
+    "flask-sqlalchemy>=3.1.1",
+    "psycopg2-binary>=2.9.10",
+    "pydantic[email]>=2.11.3",
+    "pydentic>=0.0.1.dev3",
+    "pytest>=8.3.5",
+    "ruff>=0.11.7",
+    "supabase>=2.15.0",
+]
