--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "flask-marshmallow>=1.3.0",
     "flask-migrate>=4.1.0",
     "flask-sqlalchemy>=3.1.1",
+    "gunicorn>=23.0.0",
     "psycopg2-binary>=2.9.10",
     "pydantic[email]>=2.11.3",
     "pydentic>=0.0.1.dev3",
